--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 E17gtk is a dark GTK2/GTK3 theme with sharp corners, which is designed for use in Enlightenment and gives the elegant look of Enlightenment to GTK widgets. Of course, it can be used in other environments too but it is not tuned to Gnome or any of its apps.
 
-![alt tag](https://raw.githubusercontent.com/tsujan/E17gtk/master/screenshot.jpg)
+![Alt text](screenshot.jpg?raw=true "Screenshot")
 
 Please also read the file WORKAROUNDS!
